# PaintsUndo-Vector

./: .gitignore  LICENSE  README.md  app.py  push_to_github.py  pyproject.toml  requirements.txt  run_test.py
brushes/: __init__.py  airbrush.py  base.py  gradient.py  halftone.py  hatching.py  marker.py  pencil.py  pressure.py  watercolor.py
config/: presets.yaml  stages.yaml
configs/: default.yaml
core/: __init__.py  attention.py  cli.py  direct_painter.py  human_painter.py  losses.py  optimizer.py  painting_sim.py  renderer.py  scheduler.py
core/semantic/: __init__.py  behavior_loss.py  human_sim.py  layers.py  painter.py
engine_reverser/: __init__.py  constants.py  inference.py  renderer.py  reverser.py  tokenizer.py  validate.py
engine_reverser/model/: __init__.py  transformer.py
examples/: basic_usage.py
export/: __init__.py  json_export.py  svg_export.py
reference/: engine_source.js
replay/: __init__.py  player.py
utils/: __init__.py  image.py  init.py  vis.py
