[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paints-undo-vector"
version = "0.1.0"
description = "Vector stroke generation via differentiable rendering optimization - PaintsUndo alternative that outputs clean vector brush strokes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PaintsUndo-Vector Team"}
]
keywords = ["differentiable-rendering", "vector-graphics", "stroke-generation", "painting-simulation", "diffvg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "Pillow>=9.5.0",
    "opencv-python>=4.7.0",
    "scipy>=1.10.0",
    "lpips>=0.1.4",
    "svgwrite>=1.4.3",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]
demo = [
    "gradio>=3.35.0",
    "pygame>=2.3.0",
]

[project.scripts]
paints-undo-vector = "core.cli:main"

[tool.setuptools.packages.find]
include = ["brushes*", "core*", "utils*", "export*", "replay*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
