[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paints-undo-vector"
version = "0.2.0"
description = "Vector stroke generation via differentiable rendering optimization - PaintsUndo alternative that outputs clean vector brush strokes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PaintsUndo-Vector Team"}
]
keywords = ["differentiable-rendering", "vector-graphics", "stroke-generation", "painting-simulation", "diffvg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.20.0",
    "Pillow>=8.0.0",
    "scipy>=1.7.0",
    "svgwrite>=1.4.1",
    "tqdm>=4.60.0",
    "pyyaml>=5.4",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
webui = [
    "gradio>=4.0.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[project.scripts]
paints-undo-vector = "core.cli:main"

[tool.setuptools.packages.find]
include = ["brushes*", "core*", "utils*", "export*", "replay*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
